docs: update basicskill

--- a/BasicSkill/basis/正则表达式.md
+++ b/BasicSkill/basis/正则表达式.md
@@ -1,44 +1,44 @@
 ### 数量限定符
 
-| 数量限定符 |                                           解释                                            |
-| :-------- | :--------------------------------------------------------------------------------------- |
-|    `x+`    |                                         1 或多个                                          |
-|    `x*`    |                                         0 或多个                                          |
-|    `x?`    |                                         0 或 1 个                                         |
-|   `x{n}`   |                                           n 个                                            |
-|  `x{n,}`   |                                         至少 n 个                                         |
+| 数量限定符 | 解释                                                                                      |
+| :--------- | :---------------------------------------------------------------------------------------- |
+| `x+`       | 1 或多个                                                                                  |
+| `x*`       | 0 或多个                                                                                  |
+| `x?`       | 0 或 1 个                                                                                 |
+| `x{n}`     | n 个                                                                                      |
+| `x{n,}`    | 至少 n 个                                                                                 |
 | `x{n, m}`  | n 至 m 个, 遵循贪婪原则, 会尽可能匹配多个; 如果在后面加个 ? (如 x{n, m}?), 遵循非贪婪原则 |
 
 > 贪婪可以理解成从后往前遍历, 非贪婪可以理解为从前向后遍历
 
 ### 字符限定符
 
-| 字符限定符 |                       解释                        |
-| :-------- | :----------------------------------------------- |
-|    `\d`    |              匹配一个数字字符, [0-9]              |
-|    `\D`    |            匹配一个非数字字符, [^0-9]             |
-|    `\w`    |  匹配单词字符(包括数字下划线在内), [0-9A-Za-z_]   |
-|    `\W`    | 匹配非单词字符(包括数字下划线在内), [^0-9A-Za-z_] |
-|    `\s`    |         匹配空白字符(空格、回车、制表符)          |
-|    `\S`    |                  匹配非空白字符   ◊                |
-|    `.`     |         匹配`除换行符(\n)以外`的任何单个字符          |
+| 字符限定符 | 解释                                              |
+| :--------- | :------------------------------------------------ |
+| `\d`       | 匹配一个数字字符, [0-9]                           |
+| `\D`       | 匹配一个非数字字符, [^0-9]                        |
+| `\w`       | 匹配单词字符(包括数字下划线在内), [0-9A-Za-z_]    |
+| `\W`       | 匹配非单词字符(包括数字下划线在内), [^0-9A-Za-z_] |
+| `\s`       | 匹配空白字符(空格、回车、制表符)                  |
+| `\S`       | 匹配非空白字符                                    |
+| `.`        | 匹配`除换行符(\n)以外`的任何单个字符              |
 
 根据使用方法可以进行如下分类:
 
-|     使用      |   解释   |
-| :----------- | :------ |
+| 使用          | 解释     |
+| :------------ | :------- |
 | `[0-9a-zA-Z]` | 范围字符 |
-|   `[abcd]`    | 任意字符 |
-|   `[^a-z]`    | 范围字符 |
+| `[abcd]`      | 任意字符 |
+| `[^a-z]`      | 范围字符 |
 
 ### 定位符
 
-| 定位符 |    解释    |
-| :---- | :-------- |
-|  `^`   |  开头标识  |
-|  `$`   |  结尾标识  |
-|  `\b`  |  单词边界  |
-|  `\B`  | 非单词边界 |
+| 定位符 | 解释       |
+| :----- | :--------- |
+| `^`    | 开头标识   |
+| `$`    | 结尾标识   |
+| `\b`   | 单词边界   |
+| `\B`   | 非单词边界 |
 
 ### 转义符
 
@@ -52,8 +52,8 @@
 
 ### 特殊用法
 
-|   特殊用法    |              解释              |
-| :----------- | :----------------------◊------ |
+| 特殊用法 | 解释 |
+| :------- | :--- |◊------ |
 | `?=` 正向预查 |   匹配以指定内容结束的字符串   |
 | `?!` 负向预查 | 匹配不是以指定内容结束的字符串 |
 |      `?`      | 不把选择匹配符的内容放到缓冲区 |
