docs: Raspberry_Pi

--- a/TypeScript/类型体操.md
+++ b/TypeScript/类型体操.md
@@ -4,9 +4,9 @@ Reading...
 - [x] 类型与值
 - [x] extends 与分支条件
 - [ ] 变量声明
-- [ ] 函数声明与调用
-- [ ] 没有高阶函数不影响表达能力
-- [ ] 模式匹配
+- [x] 函数声明与调用
+- [x] 没有高阶函数不影响表达能力
+- [x] 模式匹配
 - [ ] 递归与尾递归
   - [ ] 普通递归
   - [ ] 尾递归 & 尾递归转循环 & 通用递归转循环
