--- a/RaspberryPi/搭建家庭服务器.md
+++ b/RaspberryPi/搭建家庭服务器.md
@@ -1,3 +1,7 @@
+<!--
+abbrlink: fes9wogn
+-->
+
 ### 树莓派
 
 ![](http://with.muyunyun.cn/0bb19aa47dec25151a4c7a56524e5d82.jpg-400)
@@ -78,12 +82,6 @@ ssh ubuntu@192.168.1.3
 * SSH 与 VNC 的区别是?
   * SSH(Secure Shell): 安全外壳协议，是一种加密的网络传输协议。
   * VNC: 虚拟网络计算。是一种图形桌面「共享」应用程序，它使用远程帧缓冲协议来远程控制另一台计算机。
-
-### 关机
-
-```bash
-sudo shutdown -h now
-```
 
 ### 内网穿透
 
