--- a/RaspberryPi/2.搭建家庭服务器&内网穿透.md
+++ b/RaspberryPi/2.搭建家庭服务器&内网穿透.md
@@ -3,7 +3,7 @@ abbrlink: fes9wogn
 title: 搭建家庭服务器&内网穿透
 -->
 
-- [内网穿透之旅](#内网穿透之旅)
+- [内网穿透原理架构](#内网穿透原理架构)
 - [服务端(云主机) nginx 配置](#服务端云主机-nginx-配置)
 	- [服务端(云主机) nginx 添加 http 服务](#服务端云主机-nginx-添加-http-服务)
 - [frp](#frp)
@@ -13,13 +13,11 @@ title: 搭建家庭服务器&内网穿透
 - [安装 Node.js](#安装-nodejs)
 - [添加 SSH 服务](#添加-ssh-服务)
 
-### 内网穿透之旅
+### 内网穿透原理架构
 
-> 🤔 问题: frp 的核心原理是什么?
+本文中，我们使用了[frp](https://github.com/fatedier/frp)，frp 是一个专注于内网穿透的高性能的反向代理应用。
 
-要实现外网可以访问的家庭服务器，笔者使用了 [frp](https://github.com/fatedier/frp) 反向代理技术。
-
-> todo: read https://github.com/fatedier/frp/blob/dev/README_zh.md
+todo: 补充流程图。
 
 ### 服务端(云主机) nginx 配置
 
