--- a/RaspberryPi/2.搭建家庭服务器&内网穿透.md
+++ b/RaspberryPi/2.搭建家庭服务器&内网穿透.md
@@ -198,7 +198,7 @@ sudo tar zxvf frp_0.37.0_linux_386.tar.gz
 
 ![](http://with.muyunyun.cn/32f4ce6995482f6e086b85d2bdd06a01.jpg)
 
-备份客户端 frpc 的配置文件 frpc.ini
+备份服务端 frps 的配置文件 frps.ini
 
 ```bash
 sudo cp frps.ini frps.ini_backup
@@ -262,7 +262,7 @@ sudo tar zxvf frp_0.37.0_linux_arm64.tar.gz
 sudo cp frpc.ini frpc.ini_backup
 ```
 
-编辑 frpc.ini，备份如下:
+frpc.ini 文件备份如下:
 
 ```bash
 [common]
@@ -275,6 +275,8 @@ local_ip = 127.0.0.1
 local_port = 22
 remiote_port = 6000
 ```
+
+编辑 frpc.ini:
 
 ```bash
 sudo vim frpc.ini
