--- a/RaspberryPi/3.给树莓派安装Docker.md
+++ b/RaspberryPi/3.给树莓派安装Docker.md
@@ -1,3 +1,7 @@
+<!--
+abbrlink: 2a97pq3a
+-->
+
 ### 安装 Docker
 
 ```bash
@@ -36,89 +40,3 @@ sudo curl -L --fail https://raw.githubusercontent.com/linuxserver/docker-docker-
 sudo chmod +x /usr/local/bin/docker-compose
 sudo docker-compose --version
 ```
-
-### 获取 docker-compose.yml
-
-```bash
-cd /opt/
-sudo mkdir rsshub
-sudo chmod 777 -R rsshub
-cd /opt/rsshub
-wget https://raw.githubusercontent.com/DIYgod/RSSHub/master/docker-compose.yml
-```
-
-docker-compose.yml 内的内容为:
-
-```bash
-version: '3'
-
-services:
-    rsshub:
-        image: diygod/rsshub
-        restart: always
-        ports:
-            - '1200:1200'
-        environment:
-            NODE_ENV: production
-            CACHE_TYPE: redis
-            REDIS_URL: 'redis://redis:6379/'
-            PUPPETEER_WS_ENDPOINT: 'ws://browserless:3000'
-        depends_on:
-            - redis
-            - browserless
-
-    browserless:
-        # See issue 6680
-        image: browserless/chrome:1.43-chrome-stable
-        restart: always
-        ulimits:
-          core:
-            hard: 0
-            soft: 0
-
-    redis:
-        image: redis:alpine
-        restart: always
-        volumes:
-            - redis-data:/data
-
-volumes:
-    redis-data:
-```
-
-从配置信息中我们可以看出，服务端口为 1200。
-
-### 创建 volume 持久化 Redis 缓存
-
-```bash
-sudo docker volume create redis-data
-```
-
-### 启动 RSShub
-
-```bash
-cd /opt/rsshub
-sudo docker-compose up -d
-```
-
-![](http://with.muyunyun.cn/ca92893197e45c4753eab1f72bfc9abb.jpg)
-
-访问本地树莓派 ip 的 1200 端口，可以看到 RSS 已经启动在 1200 端口上了。
-
-在 frpc.ini 中添加以下配置:
-
-```bash
-[rsshub-frp-v2fy-com-1200]
-type = tcp
-local_ip = 127.0.0.1
-local_port = 1200
-remote_port = 1200
-```
-
-重启 frpc。
-
-![](http://with.muyunyun.cn/99cc2f01fb172287d2a758e88c3fd9f2.jpg)
-
-### link
-
-https://www.v2fy.com/p/2021-10-05-pi-bt-aria2-pro-1633436631000/
