--- a/RaspberryPi/4.树莓派部署RSSHub.md
+++ b/RaspberryPi/4.树莓派部署RSSHub.md
@@ -4,6 +4,8 @@ abbrlink: wns8hpzc
 
 在给[树莓派创建好 Docker 环境](https://muyunyun.cn/blog/2a97pq3a)后，本文记录给树莓派部署 RSSHub 的过程。
 
+RSShub 本质是一个为各类网页生成 RSS 信息的爬虫集合，我们可以通过阅读 RSSHub 的文档，获得各类知名网站的 RSS 信息。
+
 ### 获取 docker-compose.yml
 
 ```bash
@@ -20,37 +22,37 @@ docker-compose.yml 内的内容为:
 version: '3'
 
 services:
-    rsshub:
-        image: diygod/rsshub
-        restart: always
-        ports:
-            - '1200:1200'
-        environment:
-            NODE_ENV: production
-            CACHE_TYPE: redis
-            REDIS_URL: 'redis://redis:6379/'
-            PUPPETEER_WS_ENDPOINT: 'ws://browserless:3000'
-        depends_on:
-            - redis
-            - browserless
+	rsshub:
+		image: diygod/rsshub
+		restart: always
+		ports:
+			- '1200:1200'
+		environment:
+			NODE_ENV: production
+			CACHE_TYPE: redis
+			REDIS_URL: 'redis://redis:6379/'
+			PUPPETEER_WS_ENDPOINT: 'ws://browserless:3000'
+		depends_on:
+			- redis
+			- browserless
 
-    browserless:
-        # See issue 6680
-        image: browserless/chrome:1.43-chrome-stable
-        restart: always
-        ulimits:
-          core:
-            hard: 0
-            soft: 0
+	browserless:
+		# See issue 6680
+		image: browserless/chrome:1.43-chrome-stable
+		restart: always
+		ulimits:
+			core:
+				hard: 0
+				soft: 0
 
-    redis:
-        image: redis:alpine
-        restart: always
-        volumes:
-            - redis-data:/data
+	redis:
+		image: redis:alpine
+		restart: always
+		volumes:
+			- redis-data:/data
 
 volumes:
-    redis-data:
+	redis-data:
 ```
 
 从配置信息中我们可以看出，服务端口为 1200。
@@ -72,20 +74,26 @@ sudo docker-compose up -d
 
 访问本地树莓派 ip 的 1200 端口，可以看到 RSS 已经启动在 1200 端口上了。
 
-在 frpc.ini 中添加以下配置:
+进入 `/opt/frp_0.37.0_linux_arm64`，在 frpc.ini 中添加以下配置:
 
 ```bash
-[rsshub-frp-v2fy-com-1200]
+cd /opt/frp_0.37.0_linux_arm64
+sudo vim frpc.ini
+```
+
+```bash
+[rsshub-frp-muyunyun-cn-1200]
 type = tcp
 local_ip = 127.0.0.1
 local_port = 1200
 remote_port = 1200
 ```
 
-重启 frpc。
+重启 frpc，此时可以在公网中访问到新部署的 RSSHub 服务。
+
+```bash
+cd /opt/frp_0.37.0_linux_arm64
+pm2 restart start_frpc.sh
+```
 
 ![](http://with.muyunyun.cn/99cc2f01fb172287d2a758e88c3fd9f2.jpg)
-
-### link
-
-https://www.v2fy.com/p/2021-10-05-pi-bt-aria2-pro-1633436631000/
