docs: update RaspberryPi

--- a/RaspberryPi/5.树莓派部署code-server.md
+++ b/RaspberryPi/5.树莓派部署code-server.md
@@ -6,7 +6,9 @@
 
 参考 [code-server 官网](https://coder.com/docs/code-server/latest/install#raspberry-pi)描述，其推荐使用 [yarn 的方式](https://coder.com/docs/code-server/latest/install#yarn-npm)来安装:
 
-[前置安装](https://coder.com/docs/code-server/latest/npm#ubuntu-debian)
+[前置安装](https://github.com/cdr/code-server/blob/main/docs/npm.md)，node.js 版本需要与所下载的 VSCode's Electron 一致。
+
+> 笔者下载的 code-server 版本为 code-server_3.12.0_arm64.deb，其需要 node.js 14.x 版本。
 
 ```bash
 sudo apt-get install -y \
@@ -20,17 +22,34 @@ npm config set python python3
 
 ```bash
 npm install -g code-server
-PORT=3000 code-server
+```
+
+编辑 `.config/code-server/config.yaml`
+
+```bash
+sudo vim .config/code-server/config.yaml
+```
+
+```bash
+bind-addr: 127.0.0.1:3000
+auth: password
+password: 5fbfb4b4415cb52a6aa0a8db
+cert: false
+```
+
+```bash
+# 启动 code server
+code-server
 ```
 
 在 frpc.ini 中添加以下配置:
 
 ```bash
-[vscode-server-frp-muyunyun-cn-3000]
+[vscode-server-frp-muyunyun-cn-5555]
 type = tcp
 local_ip = 127.0.0.1
-local_port = 3000
-remote_port = 3000
+local_port = 5555
+remote_port = 5555
 ```
 
 重启 frpc 服务，此时可以在公网中访问到新部署的 code server 服务。
