docs: 树莓派部署 code-server

--- a/RaspberryPi/1.树莓派简介&烧录系统.md
+++ b/RaspberryPi/1.树莓派简介&烧录系统.md
@@ -34,7 +34,7 @@ title: 树莓派简介&烧录系统
 
 笔者最后实验成功且较为方便的方式如下:
 
-* 步骤一: 网线连上树莓派与路由器。
+* 步骤一: 通过网线链接树莓派与路由器。
 * 步骤二: 登录路由器后台，查看安装了 ubuntu 的树莓派被分配的 ip。
 
 ![](http://with.muyunyun.cn/f32ea27b99f27a350916fb14c3d1bace.jpg)
