--- a/RaspberryPi/5.树莓派部署code-server.md
+++ b/RaspberryPi/5.树莓派部署code-server.md
@@ -1,3 +1,7 @@
+<!--
+abbrlink: n45adwng
+-->
+
 ### 什么是 code-server
 
 可以通过端口访问在线的 vscode，从而实现远程编程。(比如可以在 ipad 编程)
@@ -18,11 +22,30 @@ sudo apt-get install -y \
 npm config set python python3
 ```
 
+执行如下命令，安装 yarn。参考 [Debian / Ubuntu 安装](https://yarn.bootcss.com/docs/install/#debian-stable)
+
+```bash
+curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+sudo apt update && sudo apt install yarn
+
+yarn --version // 1.22.15
+```
+
+执行 `sudo vim .bashrc` 编辑 bashrc，写入 yarn 全局安装命令的执行路径。
+
+```bash
+export PATH="$PATH:`yarn global bin`"
+source ~/.bashrc # 使之生效
+```
+
 [安装 code-server](https://coder.com/docs/code-server/latest/npm#installing)，执行如下命令:
 
 ```bash
-npm install -g code-server
+yarn global add code-server
 ```
+
+> 笔者使用 npm install -g code-server 安装，无法成功。最终使用 yarn global add code-server 安装成功。
 
 编辑 `.config/code-server/config.yaml`
 
@@ -31,9 +54,9 @@ sudo vim .config/code-server/config.yaml
 ```
 
 ```bash
-bind-addr: 127.0.0.1:3000
+bind-addr: 127.0.0.1:5555
 auth: password
-password: 5fbfb4b4415cb52a6aa0a8db
+password: xxxxxxxxx
 cert: false
 ```
 
@@ -52,12 +75,14 @@ local_port = 5555
 remote_port = 5555
 ```
 
-重启 frpc 服务，此时可以在公网中访问到新部署的 code server 服务。
+重启 frpc 服务，此时在公网中可以看到 code server 服务已成功运行。
 
 ```bash
 cd /opt/frp_0.37.0_linux_arm64
 pm2 restart start_frpc.sh
 ```
+
+![](http://with.muyunyun.cn/9f5f9fa5cd5c1510695ca492e939c255.jpg)
 
 <!-- 根据 [code-server 安装地址](https://github.com/cdr/code-server/releases)，我们应该下载 code-server_3.12.0_arm64.deb 这个包。
 
