docs: update rem

--- a/RaspberryPi/5.树莓派部署code-server.md
+++ b/RaspberryPi/5.树莓派部署code-server.md
@@ -84,6 +84,17 @@ pm2 restart start_frpc.sh
 
 ![](http://with.muyunyun.cn/9f5f9fa5cd5c1510695ca492e939c255.jpg)
 
+使用 pm2 守护运行 vscode server 服务:
+
+```bash
+cd /opt/frp_0.37.0_linux_arm64
+sudo touch start_code_server.sh
+sudo chmod 777 start_code_server.sh
+sudo echo "code-server" > start_code_server.sh
+pm2 start /opt/frp_0.37.0_linux_arm64/start_code_server.sh
+pm2 save
+```
+
 <!-- 根据 [code-server 安装地址](https://github.com/cdr/code-server/releases)，我们应该下载 code-server_3.12.0_arm64.deb 这个包。
 
 ![](http://with.muyunyun.cn/10313649049111e37996d9020c93259a.jpg) -->
