docs: update RaspberryPi

--- a/RaspberryPi/2.搭建家庭服务器&内网穿透.md
+++ b/RaspberryPi/2.搭建家庭服务器&内网穿透.md
@@ -34,6 +34,8 @@ todo: 补充流程图。
 
 `/etc/nginx/nginx.conf` 设置如下:
 
+> 下文中如若涉及到 www.muyunyun.cn 的配置可先行忽略，笔者用于测试 https。
+
 ```bash
 user www-data;
 worker_processes auto;
@@ -44,6 +46,7 @@ load_module /usr/lib/nginx/modules/ngx_stream_module.so;
 stream {
 	map $ssl_preread_server_name $backend_name {
 		frp.muyunyun.cn        frp_muyunyun_cn;
+		# www.muyunyun.cn        www_muyunyun_cn;
 		default web;
 	}
 
@@ -150,6 +153,8 @@ server {
 }
 ```
 
+<!-- 同上创建 www.muyunyun.cn.conf，添加 http 服务，使用 80 端口 -->
+
 > 端口使用 80 页面会提示`网站暂时无法访问，该网站未根据工信部相关法律规则进行备案`，[了解更多备案相关内容](https://icp-faq.dnspod.cn/why)，笔者这里将它修改为 90。
 
 ![](http://with.muyunyun.cn/04afbf893d08548ebd06a85488389298.jpg-400)
@@ -175,6 +180,8 @@ touch /usr/share/nginx/html/frp.muyunyun.cn/index.html
 <body>Test</body>
 </html>
 ```
+
+<!-- 同上创建 www.muyunyun.cn -->
 
 控制台输入 `sudo systemctl restart nginx`。
 
