--- a/RaspberryPi/5.树莓派部署code-server.md
+++ b/RaspberryPi/5.树莓派部署code-server.md
@@ -43,6 +43,7 @@ source ~/.bashrc # 使之生效
 
 ```bash
 yarn global add code-server
+code-server --version # 3.12.0
 ```
 
 > 笔者使用 npm install -g code-server 安装，无法成功。最终使用 yarn global add code-server 安装成功。
@@ -95,6 +96,9 @@ pm2 start /opt/frp_0.37.0_linux_arm64/start_code_server.sh
 pm2 save
 ```
 
-<!-- 根据 [code-server 安装地址](https://github.com/cdr/code-server/releases)，我们应该下载 code-server_3.12.0_arm64.deb 这个包。
+### Https
 
-![](http://with.muyunyun.cn/10313649049111e37996d9020c93259a.jpg) -->
+因为当前域名没有支持 https，vscode-server 中剪切板、插件等功能都不能解锁。
+  * service work 必须依赖 https。参考 [Setting up to play with service workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers#setting_up_to_play_with_service_workers)
+
+因此接着来支持配置 https，未完待续。
