docs: update RaspberryPi

--- a/RaspberryPi/踩坑方案记录&环境.md
+++ b/RaspberryPi/踩坑方案记录&环境.md
@@ -2,6 +2,13 @@
 abbrlink: dckn3sfe
 -->
 
+### 环境
+
+```bash
+# 查询温度
+cat /sys/class/thermal/thermal_zone0/temp # 43816
+```
+
 ### 树莓派连接显示器不亮屏的解决方案
 
 笔者参考 [树莓派连接显示器不亮屏的解决方案](https://www.cnblogs.com/wirehome/p/10298395.html)，最后屏幕得以在 7 寸(1024*600) 屏幕显示成功。
@@ -20,7 +27,7 @@ hdmi_ignore_edid=0xa5000080
 disable_overscan=1
 ```
 
-### 实验过暂未成功的方案
+### 暂未成功的方案
 
 #### 树莓派连接手机热点
 
