docs: deploy HTTPS

--- a/RaspberryPi/踩坑方案记录&环境.md
+++ b/RaspberryPi/踩坑方案记录&环境.md
@@ -2,11 +2,33 @@
 abbrlink: dckn3sfe
 -->
 
-### 环境
+### 查询温度
 
 ```bash
-# 查询温度
 cat /sys/class/thermal/thermal_zone0/temp # 43816
+```
+
+笔者发现 ubuntu 系统登入页面时，自动会显示温度信息:
+
+```bash
+Welcome to Ubuntu 20.04.3 LTS (GNU/Linux 5.4.0-1045-raspi aarch64)
+
+ * Documentation:  https://help.ubuntu.com
+ * Management:     https://landscape.canonical.com
+ * Support:        https://ubuntu.com/advantage
+
+  System information as of Wed Nov 24 10:39:02 UTC 2021
+
+  System load:                      0.42
+  Usage of /:                       36.9% of 28.96GB
+  Memory usage:                     14%
+  Swap usage:                       0%
+  Temperature:                      43.8 C              <----------------- Here
+  Processes:                        178
+  Users logged in:                  0
+  IPv4 address for br-b23c54f46da5: 172.18.0.1
+  IPv4 address for docker0:         172.17.0.1
+  IPv4 address for eth0:            192.168.1.3
 ```
 
 ### 树莓派连接显示器不亮屏的解决方案
