--- a/RaspberryPi/6.https域名配置.md
+++ b/RaspberryPi/6.https域名配置.md
@@ -1,33 +1,135 @@
+<!--
+abbrlink: mx5pvgl1
+-->
+
 ### Https 域名配置
+
+免费的 Https 证书，最多只有一年的期限，而且每个二级子域名要单独申请，很浪费时间。使用本文提供的方法，可以只配置一次，实现证书永久自动续期。
 
 > 由于域名并没有备案，因此笔者将域名端口挂在非 80 端口(90)上，非 80 的端口笔者尝试配置 Https 服务并未成功，后续如有需求继续调研。
 
-更进一步地，接着配置使访问 https://frp.muyunyun.cn:90 也生效。
+### acme.sh 安装实践
+
+笔者一开始将 acme.sh 安装在树莓派中，绕了弯。**应将 acme.sh 安装在云服务器端**。
 
 * 步骤一: 安装 acme.sh
 
 > https://github.com/acmesh-official/acme.sh/wiki/sudo
 
 ```bash
-#unstall for current user
+# unstall for current user
 acme.sh --uninstall
 
-#change to root
+# change to root(需要执行)
 sudo su
 
-#install again for root user
+# install again for root user
 curl https://get.acme.sh | sh -s email=328375795@qq.com
 source ~/.bashrc
-```
-
-操作中若出现权限不足相关问题比如 `./acme.sh: 2249: cannot create /home/ubuntu/.bashrc: Permission denied`，可以使用如下命令:
-
-```bash
-sudo chmod 777 .bashrc
 ```
 
 * 步骤二: 获取 https 证书
 
 ```bash
-acme.sh --issue -d frp.muyunyun.cn:90 --nginx
+acme.sh --set-default-ca --server letsencrypt
+acme.sh --issue -d www.muyunyun.cn --nginx
 ```
+
+todo: 移除 <!-- ![](http://with.muyunyun.cn/1a703cf7310aa61a10c7b7a9778b35ed.jpg-400) -->
+
+![](http://with.muyunyun.cn/3e990527ed80cb020704ab30aa502856.jpg-400)
+
+在这一步中 acme.sh 读取了 nginx 配置，并自动生成了证书。
+
+> 调试方法: acme.sh --issue -d www.muyunyun.cn --nginx --debug 2
+
+* 步骤三: 将证书拷贝到 `/etc/nginx/ssl` 文件夹。
+
+创建文件夹
+
+```bash
+mkdir -p /etc/nginx/ssl/www.muyunyun.cn
+```
+
+拷贝证书:
+
+```bash
+acme.sh --install-cert -d www.muyunyun.cn \
+--key-file       /etc/nginx/ssl/www.muyunyun.cn/www.muyunyun.cn.key  \
+--fullchain-file  /etc/nginx/ssl/www.muyunyun.cn/fullchain.cer \
+--reloadcmd     "service nginx force-reload"
+```
+
+请一定使用以上语法 acme.sh --install-cer 进行拷贝，这样证书才能保证在新的位置也能自动更新。
+
+![](http://with.muyunyun.cn/922adc77ccacd8bb3c52dd9ceb8e080e.jpg)
+
+* 步骤四: 将 `/etc/nginx/ssl/www.muyunyun.cn/` 中的证书手动配置到 nginx, 并重启 nginx 使之生效。
+
+将 /etc/nginx/conf.d/www.muyunyun.cn.conf 中的内容替换为:
+
+```bash
+server {
+    listen       80;
+    listen       [::]:80;
+    server_name  www.muyunyun.cn;
+    root         /usr/share/nginx/html/www.muyunyun.cn;
+
+    error_page 404 /404.html;
+    location = /404.html {
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+    }
+}
+
+
+server {
+    listen       443 ssl http2;
+    listen       [::]:443 ssl http2;
+    server_name  www.muyunyun.cn;
+    root         /usr/share/nginx/html/www.muyunyun.cn;
+
+    ssl_certificate "/etc/nginx/ssl/www.muyunyun.cn/fullchain.cer";
+    ssl_certificate_key "/etc/nginx/ssl/www.muyunyun.cn/www.muyunyun.cn.key";
+    ssl_session_cache shared:SSL:1m;
+    ssl_session_timeout  10m;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # Load configuration files for the default server block.
+    include /etc/nginx/default.d/*.conf;
+
+    error_page 404 /404.html;
+        location = /40x.html {
+    }
+
+    error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+    }
+}
+```
+
+重启 nginx:
+
+```bash
+systemctl restart nginx
+```
+
+打开 https://www.muyunyun.cn，证书已生效。
+
+![](http://with.muyunyun.cn/a397cb63269be96f1102a117bbe3fb49.jpg-400)
+
+由于我们全程使用 acme.sh 进行安装，acme.sh 会自动为你创建一个定时任务, 每天 0:00 点自动检测所有的证书, 如果快过期了, 需要更新, 则会自动更新证书。
+
+运行 `ps aux | grep acme` 可以看到 acme 一直在后台运行。
+
+```bash
+root@VM-16-17-ubuntu:/etc/nginx/ssl/www.muyunyun.cn# ps aux | grep acme
+root     1561193  0.0  0.0   7348   748 pts/0    S+   03:57   0:00 grep --color=auto acme
+```
+
+### 相关链接
+
+* [acme.sh 使用说明](https://github.com/acmesh-official/acme.sh/wiki/%E8%AF%B4%E6%98%8E)
