--- a/RaspberryPi/2.https域名配置.md
+++ b/RaspberryPi/2.https域名配置.md
@@ -6,13 +6,11 @@ abbrlink: mx5pvgl1
 
 免费的 Https 证书，最多只有一年的期限，而且每个二级子域名要单独申请，很浪费时间。使用本文提供的方法，可以只配置一次，实现证书永久自动续期。
 
-> 由于域名并没有备案，因此笔者将域名端口挂在非 80 端口(90)上，非 80 的端口笔者尝试配置 Https 服务并未成功，后续如有需求继续调研。
-
 ### acme.sh 安装实践
 
 笔者一开始将 acme.sh 安装在树莓派中，绕了弯。**应将 acme.sh 安装在云服务器端**。
 
-* 步骤一: 安装 acme.sh
+* 步骤一: 安装 acme.sh。
 
 > https://github.com/acmesh-official/acme.sh/wiki/sudo
 
@@ -28,18 +26,16 @@ curl https://get.acme.sh | sh -s email=328375795@qq.com
 source ~/.bashrc
 ```
 
-* 步骤二: 获取 https 证书
+* 步骤二: 获取 https 证书。
 
 ```bash
 acme.sh --set-default-ca --server letsencrypt
 acme.sh --issue -d www.muyunyun.cn --nginx
 ```
 
-todo: 移除 <!-- ![](http://with.muyunyun.cn/1a703cf7310aa61a10c7b7a9778b35ed.jpg-400) -->
-
 ![](http://with.muyunyun.cn/3e990527ed80cb020704ab30aa502856.jpg-400)
 
-在这一步中 acme.sh 读取了 nginx 配置，并自动生成了证书。
+在这一步中 acme.sh 读取了 nginx 配置(路径: `/etc/nginx/conf.d/www.muyunyun.cn.conf`)，并自动生成了证书。
 
 > 调试方法: acme.sh --issue -d www.muyunyun.cn --nginx --debug 2
 
@@ -66,7 +62,7 @@ acme.sh --install-cert -d www.muyunyun.cn \
 
 * 步骤四: 将 `/etc/nginx/ssl/www.muyunyun.cn/` 中的证书手动配置到 nginx, 并重启 nginx 使之生效。
 
-将 /etc/nginx/conf.d/www.muyunyun.cn.conf 中的内容替换为:
+将 `/etc/nginx/conf.d/www.muyunyun.cn.conf` 中的内容替换为:
 
 ```bash
 server {
