--- a/RaspberryPi/3.搭建家庭服务器&内网穿透.md
+++ b/RaspberryPi/3.搭建家庭服务器&内网穿透.md
@@ -25,7 +25,7 @@ todo: 补充流程图。
 
 为了方面后续的调试运行，需放开以下几个服务器端口。
 
-* 90 端口:（Nginx 接收 http 请求用）
+* 80 端口:（Nginx 接收 http 请求用）
 * 6000 端口:（转发映射 SSH 服务用）
 * 8080 端口:（转发映射 http 服务用）
 * 7000 端口:（服务器端 frps 运行端口）
@@ -34,7 +34,10 @@ todo: 补充流程图。
 
 `/etc/nginx/nginx.conf` 设置如下:
 
-> 下文中如若涉及到 www.muyunyun.cn 的配置可先行忽略，笔者用于测试 https。
+* **Todo**
+  * 问题一: 了解 $ssl_preread_server_name 与 $backend_name 是什么?
+  * 问题二: `[::]:443` 中的 `[::]:` 的含义是什么?
+  * 问题三: `/etc/nginx/conf.d/frp.muyunyun.cn.conf` 文件中的配置与 `/etc/nginx/nginx.conf` 中的配置作用的对象分别是什么?
 
 ```bash
 user www-data;
@@ -46,7 +49,6 @@ load_module /usr/lib/nginx/modules/ngx_stream_module.so;
 stream {
 	map $ssl_preread_server_name $backend_name {
 		frp.muyunyun.cn        frp_muyunyun_cn;
-		# www.muyunyun.cn        www_muyunyun_cn;
 		default web;
 	}
 
@@ -57,6 +59,14 @@ stream {
 	upstream web {
 		server 127.0.0.1:80;
 	}
+
+  # used for https
+  server {
+		listen       443 reuseport;
+		listen  [::]:443 reuseport;
+		proxy_pass   $backend_name;
+		ssl_preread  on;
+  }
 }
 
 events {
@@ -120,8 +130,6 @@ http {
 
 #### 服务端(云主机) nginx 添加 http 服务
 
-> 🤔 问题: `/etc/nginx/conf.d/frp.muyunyun.cn.conf` 文件中的配置与 `/etc/nginx/nginx.conf` 中的配置作用的对象分别是什么?
-
 以配置域名 frp.muyunyun.cn 为例，新建配置文件 `/etc/nginx/conf.d/frp.muyunyun.cn.conf`
 
 ```bash
@@ -130,15 +138,16 @@ touch /etc/nginx/conf.d/frp.muyunyun.cn.conf
 
 在 `/etc/nginx/conf.d/frp.muyunyun.cn.conf` 中添加 http 服务相关内容
 
-```
+```bash
 server {
 	server_name      frp.muyunyun.cn;
-	listen           90;
+	listen           80;
+	listen           [::]:80;
 	root             /usr/share/nginx/html/frp.muyunyun.cn;
 
 	location / {
 		proxy_pass http://127.0.0.1:8080;
-		proxy_set_header Host $host:90;
+		proxy_set_header Host $host:80;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
@@ -151,11 +160,42 @@ server {
 		location = /50x.html {
 	}
 }
+
+# used for https。todo for verify........
+server {
+    listen       8080 ssl http2;
+    listen       [::]:8080 ssl http2;
+    server_name  frp.muyunyun.cn;
+    root         /usr/share/nginx/html/frp.muyunyun.cn;
+
+    location / {
+        proxy_pass http://127.0.0.1:8080;
+        proxy_set_header Host $host:443;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    ssl_certificate "/etc/nginx/ssl/frp.muyunyun.cn/fullchain.cer";
+    ssl_certificate_key "/etc/nginx/ssl/frp.muyunyun.cn/frp.muyunyun.cn.key";
+    ssl_session_cache shared:SSL:1m;
+    ssl_session_timeout  10m;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # Load configuration files for the default server block.
+    include /etc/nginx/default.d/*.conf;
+
+    error_page 404 /404.html;
+        location = /40x.html {
+    }
+
+    error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+    }
+}
 ```
 
-<!-- 同上创建 www.muyunyun.cn.conf，添加 http 服务，使用 80 端口 -->
-
-> 端口使用 80 页面会提示`网站暂时无法访问，该网站未根据工信部相关法律规则进行备案`，[了解更多备案相关内容](https://icp-faq.dnspod.cn/why)，笔者这里将它修改为 90。
+> 端口使用 80 页面会提示`网站暂时无法访问，该网站未根据工信部相关法律规则进行备案`(与二级域名无关，比如使用 www.muyunyun.cn 或者 frp.muyunyun.cn 都行)，[了解更多备案相关内容](https://icp-faq.dnspod.cn/why)。如果未备案，可以将它修改 80 端口为其它端口，比如 90 端口。如果后续要使用 acme.sh 申请 https 服务，还是需要用 80 端口。
 
 ![](http://with.muyunyun.cn/04afbf893d08548ebd06a85488389298.jpg-400)
 
@@ -181,11 +221,9 @@ touch /usr/share/nginx/html/frp.muyunyun.cn/index.html
 </html>
 ```
 
-<!-- 同上创建 www.muyunyun.cn -->
-
 控制台输入 `sudo systemctl restart nginx`。
 
-此时在浏览器访问 http://frp.muyunyun.cn:90 可以看到目标内容:
+此时在浏览器访问 http://frp.muyunyun.cn 可以看到目标内容:
 
 ![](http://with.muyunyun.cn/4373b2aaca032ed2a78fac53279532d2.jpg)
 
@@ -306,7 +344,7 @@ custom_domains = frp.muyunyun.cn
 ./frpc -c frpc.ini
 ```
 
-接着从公网访问 frp.muyunyun.cn:90，验证内网穿透是否成功。
+接着从公网访问 frp.muyunyun.cn，验证内网穿透是否成功。
 
 ![](http://with.muyunyun.cn/c61981adbdaba27efbc45b26c1921891.jpg-400)
 
@@ -387,7 +425,7 @@ pm2 save
 
 ![](http://with.muyunyun.cn/442c4a0b41ad3bc6fcbb09f6d162bd06.jpg)
 
-在公网访问 frp.muyunyun.cn:90。💐💐💐至此有了外网可以访问的家庭服务器。
+在公网访问 frp.muyunyun.cn。💐💐💐至此有了外网可以访问的家庭服务器。
 
 ![](http://with.muyunyun.cn/fac7d7c9a8098d72f98cd6f4485347cd.jpg)
 
