--- a/RaspberryPi/6.树莓派部署code-server.md
+++ b/RaspberryPi/6.树莓派部署code-server.md
@@ -8,7 +8,7 @@ abbrlink: n45adwng
 
 ### 树莓派上部署 code-server
 
-参考 [code-server 官网](https://coder.com/docs/code-server/latest/install#raspberry-pi)描述，其推荐使用 [yarn 的方式](https://coder.com/docs/code-server/latest/install#yarn-npm)来安装:
+参考 [code-server 官网](https://coder.com/docs/code-server/latest/install#raspberry-pi)描述，其推荐使用 [yarn 的方式](https://coder.com/docs/code-server/latest/install#yarn-npm)来安装。
 
 [前置安装](https://github.com/cdr/code-server/blob/main/docs/npm.md)，node.js 版本需要与所下载的 VSCode's Electron 一致。
 
