--- a/RaspberryPi/6.基于树莓派部署RSSHub.md
+++ b/RaspberryPi/6.基于树莓派部署RSSHub.md
@@ -1,5 +1,6 @@
 <!--
 abbrlink: wns8hpzc
+title: 基于树莓派部署 RSSHub
 -->
 
 在给[树莓派创建好 Docker 环境](https://muyunyun.cn/blog/2a97pq3a)后，本文记录给树莓派部署 RSSHub 的过程。
