--- a/RaspberryPi/3.内网穿透.md
+++ b/RaspberryPi/3.内网穿透.md
@@ -1,6 +1,6 @@
 <!--
 abbrlink: fes9wogn
-title: 搭建家庭服务器&内网穿透
+title: 内网穿透
 -->
 
 - [内网穿透原理架构](#内网穿透原理架构)
@@ -10,7 +10,6 @@ title: 搭建家庭服务器&内网穿透
 	- [服务端(云主机)配置](#服务端云主机配置)
 	- [进一步地使用 pm2 运行 frps](#进一步地使用-pm2-运行-frps)
 	- [客户端(树莓派)配置](#客户端树莓派配置)
-- [安装 Node.js](#安装-nodejs)
 - [添加 SSH 服务](#添加-ssh-服务)
 
 ### 内网穿透原理架构
@@ -30,7 +29,7 @@ todo: 补充流程图。
 * 8080 端口:（转发映射 http 服务用）
 * 7000 端口:（服务器端 frps 运行端口）
 
-配置 Nginx，转发对 frp.muyunyun.cn 域名请求到 8080 端口。
+配置 Nginx，转发对 `frp.muyunyun.cn` 域名请求到 `8080 端口`。
 
 `/etc/nginx/nginx.conf` 设置如下:
 
@@ -49,24 +48,11 @@ load_module /usr/lib/nginx/modules/ngx_stream_module.so;
 stream {
 	map $ssl_preread_server_name $backend_name {
 		frp.muyunyun.cn        frp_muyunyun_cn;
-		default web;
 	}
 
 	upstream frp_muyunyun_cn {
 		server 127.0.0.1:8080;
 	}
-
-	upstream web {
-		server 127.0.0.1:80;
-	}
-
-  # used for https
-  server {
-		listen       443 reuseport;
-		listen  [::]:443 reuseport;
-		proxy_pass   $backend_name;
-		ssl_preread  on;
-  }
 }
 
 events {
@@ -130,13 +116,13 @@ http {
 
 #### 服务端(云主机) nginx 添加 http 服务
 
-以配置域名 frp.muyunyun.cn 为例，新建配置文件 `/etc/nginx/conf.d/frp.muyunyun.cn.conf`
+以配置域名 frp.muyunyun.cn 为例，新建配置文件:
 
 ```bash
 touch /etc/nginx/conf.d/frp.muyunyun.cn.conf
 ```
 
-在 `/etc/nginx/conf.d/frp.muyunyun.cn.conf` 中添加 http 服务相关内容
+在配置文件中添加 http 服务相关内容
 
 ```bash
 server {
@@ -161,10 +147,10 @@ server {
 	}
 }
 
-# used for https。todo for verify........
+# used for https.
 server {
-    listen       8080 ssl http2;
-    listen       [::]:8080 ssl http2;
+    listen       443 ssl http2;
+    listen       [::]:443 ssl http2;
     server_name  frp.muyunyun.cn;
     root         /usr/share/nginx/html/frp.muyunyun.cn;
 
@@ -350,84 +336,7 @@ custom_domains = frp.muyunyun.cn
 
 可以看到来自公网的请求在树莓派的 frp 客户端已经有了反应，接着我们在树莓派搭建一个简单服务。
 
-### 安装 Node.js
-
-使用 ARMv8 版本的稳定版 Node.js。
-
-```bash
-cd /opt/
-sudo wget https://nodejs.org/dist/v14.18.0/node-v14.18.0-linux-arm64.tar.xz
-sudo tar xvf node-v14.18.0-linux-arm64.tar.xz
-```
-
-将 Node.js 添加到系统变量
-
-```bash
-sudo echo "export NODE_HOME=/opt/node-v14.18.0-linux-arm64" >> ~/.bashrc
-sudo echo "export PATH=\$NODE_HOME/bin:\$PATH" >> ~/.bashrc
-source ~/.bashrc
-```
-
-此时在树莓派中输入 node -v，可以看到对应版本如下:
-
-```bash
-ubuntu@ubuntu:~$ node -v
-v14.18.0
-ubuntu@ubuntu:~$ npm -v
-6.14.15
-```
-
-接着安装 http-server 服务
-
-```bash
-npm install http-server -g
-```
-
-在 /opt 文件夹 新建 frp.muyunyun.cn 文件夹, 并创建 hello.txt 文件。
-
-```bash
-sudo mkdir /opt/frp.muyunyun.cn
-sudo chmod 777 -R /opt/frp.muyunyun.cn
-sudo touch /opt/frp.muyunyun.cn/hello.txt
-sudo chmod 777 -R /opt/frp.muyunyun.cn/hello.txt
-sudo echo "Hello World!" > /opt/frp.muyunyun.cn/hello.txt
-```
-
-安装 pm2
-
-```bash
-npm install pm2 -g
-```
-
-使用 pm2 守护运行 http-server 服务
-
-```bash
-cd /opt/frp_0.37.0_linux_arm64
-sudo touch start_http_server.sh
-sudo chmod 777 start_http_server.sh
-sudo echo "http-server /opt/frp.muyunyun.cn -p 8080" > start_http_server.sh
-pm2 start /opt/frp_0.37.0_linux_arm64/start_http_server.sh
-pm2 save
-```
-
-使用 pm2 守护运行 frpc 服务
-
-```bash
-sudo touch /opt/frp_0.37.0_linux_arm64/start_frpc.sh
-sudo chmod 777 /opt/frp_0.37.0_linux_arm64/start_frpc.sh
-sudo echo "/opt/frp_0.37.0_linux_arm64/frpc -c /opt/frp_0.37.0_linux_arm64/frpc.ini" > /opt/frp_0.37.0_linux_arm64/start_frpc.sh
-cd /opt/frp_0.37.0_linux_arm64/
-pm2 start /opt/frp_0.37.0_linux_arm64/start_frpc.sh
-pm2 save
-```
-
-可以使用 `pm2 list` 查看当前树莓派中的服务列表。
-
-![](http://with.muyunyun.cn/442c4a0b41ad3bc6fcbb09f6d162bd06.jpg)
-
-在公网访问 frp.muyunyun.cn。💐💐💐至此有了外网可以访问的家庭服务器。
-
-![](http://with.muyunyun.cn/fac7d7c9a8098d72f98cd6f4485347cd.jpg)
+> 进一步地，可以参考 [基于树莓派搭建家庭服务器]()。
 
 ### 添加 SSH 服务
 
