--- a/RaspberryPi/2.内网穿透.md
+++ b/RaspberryPi/2.内网穿透.md
@@ -4,8 +4,7 @@ title: 内网穿透
 -->
 
 - [内网穿透原理架构](#内网穿透原理架构)
-- [服务端(云主机) nginx 配置](#服务端云主机-nginx-配置)
-	- [服务端(云主机) nginx 添加 http 服务](#服务端云主机-nginx-添加-http-服务)
+- [服务端(云主机) nginx 添加 Http 服务](#服务端云主机-nginx-添加-http-服务)
 - [frp](#frp)
 	- [服务端(云主机)配置](#服务端云主机配置)
 	- [进一步地使用 pm2 运行 frps](#进一步地使用-pm2-运行-frps)
@@ -18,9 +17,9 @@ title: 内网穿透
 
 todo: 补充流程图。
 
-### 服务端(云主机) nginx 配置
+### 服务端(云主机) nginx 添加 Http 服务
 
-首先将域名(笔者为 frp.muyunyun.cn )解析到服务器 ip。
+首先将域名控制台(本文中使用 frp.muyunyun.cn 域名作为演示)解析到服务器 ip。
 
 为了方面后续的调试运行，需放开以下几个服务器端口。
 
@@ -29,100 +28,17 @@ todo: 补充流程图。
 * 8080 端口:（转发映射 http 服务用）
 * 7000 端口:（服务器端 frps 运行端口）
 
-配置 Nginx，转发对 `frp.muyunyun.cn` 域名请求到 `8080 端口`。
+以配置域名 frp.muyunyun.cn 为例，，转发对 `frp.muyunyun.cn` 域名请求到 `8080 端口`。
 
-`/etc/nginx/nginx.conf` 设置如下:
+> 参考 [nginx 常用命令](https://muyunyun.cn/blog/yq9jpwrw)安装 Nginx。
 
-* **Todo**
-  * 问题一: 了解 $ssl_preread_server_name 与 $backend_name 是什么?
-  * 问题二: `[::]:443` 中的 `[::]:` 的含义是什么?
-  * 问题三: `/etc/nginx/conf.d/frp.muyunyun.cn.conf` 文件中的配置与 `/etc/nginx/nginx.conf` 中的配置作用的对象分别是什么?
-
-```bash
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
-load_module /usr/lib/nginx/modules/ngx_stream_module.so;
-
-stream {
-	map $ssl_preread_server_name $backend_name {
-		frp.muyunyun.cn        frp_muyunyun_cn;
-	}
-
-	upstream frp_muyunyun_cn {
-		server 127.0.0.1:8080;
-	}
-}
-
-events {
-	worker_connections 768;
-	# multi_accept on;
-}
-
-http {
-	##
-	# Basic Settings
-	##
-
-	sendfile on;
-	tcp_nopush on;
-	tcp_nodelay on;
-	keepalive_timeout 65;
-	types_hash_max_size 2048;
-	# server_tokens off;
-
-	# server_names_hash_bucket_size 64;
-	# server_name_in_redirect off;
-
-	include /etc/nginx/mime.types;
-	default_type application/octet-stream;
-
-	##
-	# SSL Settings
-	##
-
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
-	ssl_prefer_server_ciphers on;
-
-	##
-	# Logging Settings
-	##
-
-	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
-
-	##
-	# Gzip Settings
-	##
-
-	gzip on;
-
-	# gzip_vary on;
-	# gzip_proxied any;
-	# gzip_comp_level 6;
-	# gzip_buffers 16 8k;
-	# gzip_http_version 1.1;
-	# gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-	##
-	# Virtual Host Configs
-	##
-
-	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
-}
-```
-
-#### 服务端(云主机) nginx 添加 http 服务
-
-以配置域名 frp.muyunyun.cn 为例，新建配置文件:
+新建配置文件:
 
 ```bash
 touch /etc/nginx/conf.d/frp.muyunyun.cn.conf
 ```
 
-在配置文件中添加 http 服务相关内容
+在配置文件中添加 http 服务相关内容:
 
 ```bash
 server {
@@ -132,6 +48,7 @@ server {
 	root             /usr/share/nginx/html/frp.muyunyun.cn;
 
 	location / {
+		# 这里先预留 8080 端口，在后文章节[基于树莓派搭建家庭服务器](https://muyunyun.cn/blog/r4zxdn6n) 中会在 8080 端口上启动 Web 服务。
 		proxy_pass http://127.0.0.1:8080;
 		proxy_set_header Host $host:80;
 		proxy_set_header X-Real-IP $remote_addr;
@@ -147,37 +64,37 @@ server {
 	}
 }
 
-# used for https.
+# 以下配置用于 Https, 若读者后续有配置 Https 的需求时可再折回参考如下配置，参考 [HTTPS 协议配置](https://muyunyun.cn/blog/mx5pvgl1)。
 server {
-    listen       443 ssl http2;
-    listen       [::]:443 ssl http2;
-    server_name  frp.muyunyun.cn;
-    root         /usr/share/nginx/html/frp.muyunyun.cn;
+	listen       443 ssl http2;
+	listen       [::]:443 ssl http2;
+	server_name  frp.muyunyun.cn;
+	root         /usr/share/nginx/html/frp.muyunyun.cn;
 
-    location / {
-        proxy_pass http://127.0.0.1:8080;
-        proxy_set_header Host $host:443;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+	location / {
+		proxy_pass http://127.0.0.1:8080;
+		proxy_set_header Host $host:443;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	}
 
-    ssl_certificate "/etc/nginx/ssl/frp.muyunyun.cn/fullchain.cer";
-    ssl_certificate_key "/etc/nginx/ssl/frp.muyunyun.cn/frp.muyunyun.cn.key";
-    ssl_session_cache shared:SSL:1m;
-    ssl_session_timeout  10m;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
+	ssl_certificate "/etc/nginx/ssl/frp.muyunyun.cn/fullchain.cer";
+	ssl_certificate_key "/etc/nginx/ssl/frp.muyunyun.cn/frp.muyunyun.cn.key";
+	ssl_session_cache shared:SSL:1m;
+	ssl_session_timeout  10m;
+	ssl_ciphers HIGH:!aNULL:!MD5;
+	ssl_prefer_server_ciphers on;
 
-    # Load configuration files for the default server block.
-    include /etc/nginx/default.d/*.conf;
+	# Load configuration files for the default server block.
+	include /etc/nginx/default.d/*.conf;
 
-    error_page 404 /404.html;
-        location = /40x.html {
-    }
+	error_page 404 /404.html;
+		location = /40x.html {
+	}
 
-    error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-    }
+	error_page 500 502 503 504 /50x.html;
+		location = /50x.html {
+	}
 }
 ```
 
@@ -336,7 +253,7 @@ custom_domains = frp.muyunyun.cn
 
 可以看到来自公网的请求在树莓派的 frp 客户端已经有了反应，接着我们在树莓派搭建一个简单服务。
 
-> 进一步地，可以参考 [基于树莓派搭建家庭服务器]()。
+> 进一步地，可以参考 [基于树莓派搭建家庭服务器](https://muyunyun.cn/blog/r4zxdn6n)。
 
 ### 添加 SSH 服务
 
@@ -364,3 +281,5 @@ ssh ubuntu@frp.muyunyun.cn -p 6000
 ```
 
 ![](http://with.muyunyun.cn/43431e73e8a218fb9e0a494f61f8f0df.jpg)
+
+至此实现了在公网使用 SSH 操作访问树莓派的需求。
