--- a/RaspberryPi/3.基于树莓派搭建家庭服务器.md
+++ b/RaspberryPi/3.基于树莓派搭建家庭服务器.md
@@ -78,6 +78,6 @@ pm2 save
 
 ![](http://with.muyunyun.cn/442c4a0b41ad3bc6fcbb09f6d162bd06.jpg)
 
-在公网访问 frp.muyunyun.cn。💐💐💐至此有了外网可以访问的家庭服务器。
+在公网访问 http://frp.muyunyun.cn。💐💐💐至此有了外网可以访问的家庭服务器。
 
 ![](http://with.muyunyun.cn/fac7d7c9a8098d72f98cd6f4485347cd.jpg)
