--- a/RaspberryPi/6.HTTPS协议配置.md
+++ b/RaspberryPi/6.HTTPS协议配置.md
@@ -1,9 +1,9 @@
 <!--
 abbrlink: mx5pvgl1
-title: HTTPS 域名配置
+title: HTTPS 协议配置
 -->
 
-### Https 域名配置
+### Https 协议配置
 
 免费的 Https 证书，最多只有一年的期限，而且每个二级子域名要单独申请，很浪费时间。使用本文提供的方法，可以只配置一次，实现证书永久自动续期。
 
@@ -28,6 +28,8 @@ source ~/.bashrc
 ```
 
 * 步骤二: 获取 https 证书。
+
+> 说明: 本文以 www.muyunyun.cn 作为案例演示，[基于树莓派搭建家庭服务器](https://muyunyun.cn/blog/r4zxdn6n) 中的 frp.muyunyun.cn 如果要配置为 HTTPS，操作同理。
 
 ```bash
 acme.sh --set-default-ca --server letsencrypt
@@ -80,7 +82,6 @@ server {
     location = /50x.html {
     }
 }
-
 
 server {
     listen       443 ssl http2;
