--- a/RaspberryPi/nginx/常用命令.md
+++ b/RaspberryPi/nginx/常用命令.md
@@ -1,8 +1,9 @@
 <!--
 abbrlink: yq9jpwrw
+title: nginx 常用命令
 -->
 
-### nginx 常用命令
+### nginx 常用命令(ubuntu)
 
 ```bash
 sudo apt update
@@ -23,8 +24,8 @@ sudo systemctl restart nginx
 sudo systemctl reload nginx
 
 # 停止 nginx
-sudo service nginx stop
 sudo systemctl stop nginx
+sudo service nginx stop
 
 # 强制杀死 nginx
 sudo pkill -9 nginx
@@ -38,6 +39,13 @@ sudo apt-get purge nginx nginx-common
 sudo apt-get autoremove
 # 删除两个主要的包。
 sudo apt-get remove nginx-full nginx-common
+
+# 查看版本
+nginx -v
+# 检查配置文件是否正确
+sudo nginx -t
+# 查询 nginx 是否启动
+ps -ef | grep nginx
 ```
 
 安装好以后, 执行 `sudo systemctl status nginx`, 可以看到
@@ -47,9 +55,19 @@ nginx.service - A high performance web server and a reverse proxy server
 ...
 ```
 
+### 常用命令(Mac)
+
+```js
+sudo brew services start nginx // 启动 nginx(8080 端口)
+sudo brew services stop nginx  // 关闭 nginx
+brew services restart nginx    // 重启 nginx
+```
+
+> mac 重启后需要重新跑一遍 sudo brew services stop nginx、sudo brew services start nginx
+
 ### nginx 配置文件初始化备份
 
-nginx 配置文件路径: `/etc/nginx/nginx.conf`。
+`nginx 主配置文件路径`: /etc/nginx/nginx.conf。
 
 ```bash
 user www-data;
