--- a/RaspberryPi/1.树莓派简介&烧录系统.md
+++ b/RaspberryPi/1.树莓派简介&烧录系统.md
@@ -53,7 +53,4 @@ ssh ubuntu@192.168.1.3
 
 ### 树莓派 ubuntu 系统
 
-* 初始账号: ubuntu
-* 初始密码: ubuntu
-
-首次登入需要修改密码。
+首次登入树莓派 ubuntu 系统需要修改密码，其初始账号与密码都为 ubuntu。
