--- a/RaspberryPi/7.基于树莓派部署code-server.md
+++ b/RaspberryPi/7.基于树莓派部署code-server.md
@@ -5,7 +5,7 @@ title: 基于树莓派部署 code-server
 
 ### 什么是 code-server
 
-可以通过端口访问在线的 vscode，从而实现远程编程。(比如可以在 ipad 编程)
+可以通过端口访问在线的 vscode，从而实现远程编程(比如在 ipad 编程)。
 
 ### 树莓派上部署 code-server
 
@@ -77,12 +77,18 @@ local_port = 5555
 remote_port = 5555
 ```
 
-重启 frpc 服务，此时在公网中可以看到 code server 服务已成功运行。
+重启 frpc 服务:
 
 ```bash
 cd /opt/frp_0.37.0_linux_arm64
 pm2 restart start_frpc.sh
 ```
+
+此时在 fprs 服务器端(云主机)中通过 `lsof -i:5555` 可以看到服务端端口 5555 已经被 frps 占据
+
+![](http://with.muyunyun.cn/c4987da142cbc4b261b6b333df5d490b.jpg)
+
+同时在公网中可以看到 code server 服务已成功运行
 
 ![](http://with.muyunyun.cn/9f5f9fa5cd5c1510695ca492e939c255.jpg)
 
@@ -97,9 +103,86 @@ pm2 start /opt/frp_0.37.0_linux_arm64/start_code_server.sh
 pm2 save
 ```
 
-### Https
+### 支持 Https 协议访问
 
-因为当前域名没有支持 https，vscode-server 中剪切板、插件等功能都不能解锁。
-  * service work 必须依赖 https。参考 [Setting up to play with service workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers#setting_up_to_play_with_service_workers)
+由于没有支持 Https，vscode-server 中的剪切板、插件等功能都不能解锁，同时控制台报了与 service work 相关的报错(参考 [Setting up to play with service workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers#setting_up_to_play_with_service_workers), service work 必须依赖 https)。
 
-因此接着来支持配置 https，未完待续。
+因此在继续 vscode-server 配置之前需要先支持 Https 协议，读者可以参考 [HTTPS 域名配置](https://muyunyun.cn/blog/mx5pvgl1) 一节，其介绍了给域名获取免费的 Https 证书并让 Https 生效。
+
+### 支持 Web Socket 结合 Https 协议使用
+
+在配置完 HTTPS 服务后，访问相关链接还是无法使用，因为 code-server 是基于 Web Socket 来保持长连接的，因此还需要在 nginx 对 websocket 的流量作相关的配置。
+
+执行 `vim /etc/nginx/conf.d/www.muyunyun.cn.conf`，完整配置如下:
+
+```bash
+map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+}
+
+upstream www_muyunyun_cn {
+  server 127.0.0.1:5555;
+}
+
+server {
+    server_name      www.muyunyun.cn;
+    listen           80;
+    listen           [::]:80;
+#    root             /usr/share/nginx/html/www.muyunyun.cn;
+    rewrite ^(.*)$ https://$host$1 permanent;
+
+#    location / {
+#      proxy_pass http://127.0.0.1:5555;
+#      proxy_set_header Host $host:80;
+#      proxy_set_header X-Real-IP $remote_addr;
+#      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#    }
+
+    error_page 404 /404.html;
+        location = /40x.html {
+    }
+
+    error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+    }
+}
+
+server {
+    listen       443 ssl http2;
+    listen       [::]:443 ssl http2;
+    server_name  www.muyunyun.cn;
+    root         /usr/share/nginx/html/www.muyunyun.cn;
+
+    location / {
+        proxy_pass http://www_muyunyun_cn;
+        proxy_set_header Host $host:443;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+    }
+
+    ssl_certificate "/etc/nginx/ssl/www.muyunyun.cn/fullchain.cer";
+    ssl_certificate_key "/etc/nginx/ssl/www.muyunyun.cn/www.muyunyun.cn.key";
+    ssl_session_cache shared:SSL:1m;
+    ssl_session_timeout  10m;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # Load configuration files for the default server block.
+    include /etc/nginx/default.d/*.conf;
+
+    error_page 404 /404.html;
+        location = /40x.html {
+    }
+
+    error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+    }
+}
+```
+
+此时实现了在公网中使用 vscode。
