docs: visit code-server using HTTPS

--- a/RaspberryPi/5.基于树莓派部署RSSHub.md
+++ b/RaspberryPi/5.基于树莓派部署RSSHub.md
@@ -5,7 +5,7 @@ title: 基于树莓派部署 RSSHub
 
 在给[树莓派创建好 Docker 环境](https://muyunyun.cn/blog/2a97pq3a)后，本文记录给树莓派部署 RSSHub 的过程。
 
-RSShub 本质是一个为各类网页生成 RSS 信息的爬虫集合，我们可以通过阅读 RSSHub 的文档，获得各类知名网站的 RSS 信息。
+RSShub 本质是一个为各类网页生成 RSS 信息的爬虫集合，我们通过阅读 RSSHub 的文档，可以获得各类知名网站的 RSS 信息。
 
 ### 获取 docker-compose.yml
 
