docs: update RaspberryPi

--- a/RaspberryPi/7.基于树莓派部署code-server.md
+++ b/RaspberryPi/7.基于树莓派部署code-server.md
@@ -186,3 +186,21 @@ server {
 此时实现了在公网中使用使用 https 访问 code-server。
 
 ![](http://with.muyunyun.cn/c8b78a74fccd162ef97ecd2b53da09f4.jpg-400)
+
+### code-server 同步 ssh
+
+登入树莓派端，输入
+
+```bash
+ssh-keygen -C "your email" -f ~/.ssh/github
+```
+
+将 ~/.ssh/github.pub 公钥中的内容复制到剪贴板，拷贝到 [GitHub ssh](https://github.com/settings/keys) 的 Key 文本框中。
+
+执行以下命令测试是否认证成功
+
+```bash
+ssh -T git@github.com
+
+# Hi github! You've successfully authenticated, but GitHub does not provide shell access.
+```
