docs: update raspberry_pi

--- a/RaspberryPi/7.基于树莓派部署code-server.md
+++ b/RaspberryPi/7.基于树莓派部署code-server.md
@@ -192,7 +192,7 @@ server {
 登入树莓派端，输入
 
 ```bash
-ssh-keygen -C "your email" -f ~/.ssh/github
+ssh-keygen -t rsa -C "youremail@example.com" -f ~/.ssh/github
 ```
 
 将 ~/.ssh/github.pub 公钥中的内容复制到剪贴板，拷贝到 [GitHub ssh](https://github.com/settings/keys) 的 Key 文本框中。
@@ -201,6 +201,5 @@ ssh-keygen -C "your email" -f ~/.ssh/github
 
 ```bash
 ssh -T git@github.com
-
 # Hi github! You've successfully authenticated, but GitHub does not provide shell access.
 ```
