docs: update charles

--- a/RaspberryPi/7.基于树莓派部署code-server.md
+++ b/RaspberryPi/7.基于树莓派部署code-server.md
@@ -187,6 +187,12 @@ server {
 
 ![](http://with.muyunyun.cn/c8b78a74fccd162ef97ecd2b53da09f4.jpg-400)
 
+### 给项目添加写入权限
+
+```bash
+chown -R ubuntu /home/project/blog
+```
+
 ### code-server 同步 ssh
 
 登入树莓派端，输入
