docs: submit with remote raspberry_pi

--- a/RaspberryPi/7.基于树莓派部署code-server.md
+++ b/RaspberryPi/7.基于树莓派部署code-server.md
@@ -191,6 +191,7 @@ server {
 
 ```bash
 chown -R ubuntu /home/project/blog
+chown -R ubuntu /home/project/blog/.git
 ```
 
 ### code-server 同步 ssh
@@ -200,6 +201,8 @@ chown -R ubuntu /home/project/blog
 ```bash
 ssh-keygen -t rsa -C "youremail@example.com" -f ~/.ssh/github
 ```
+
+// todo 判断如下步骤是否必须
 
 将 ~/.ssh/github.pub 公钥中的内容复制到剪贴板，拷贝到 [GitHub ssh](https://github.com/settings/keys) 的 Key 文本框中。
 
