docs: update pi

--- a/RaspberryPi/7.基于树莓派部署code-server.md
+++ b/RaspberryPi/7.基于树莓派部署code-server.md
@@ -9,11 +9,9 @@ title: 基于树莓派部署 code-server
 
 ### 树莓派上部署 code-server
 
-参考 [code-server 官网](https://coder.com/docs/code-server/latest/install#raspberry-pi)描述，其推荐使用 [yarn 的方式](https://coder.com/docs/code-server/latest/install#yarn-npm)来安装。
+参考 [code-server 官网](https://coder.com/docs/code-server/latest/install#raspberry-pi)，在树莓派上其推荐使用 [yarn 的方式](https://coder.com/docs/code-server/latest/install#yarn-npm)来进行安装 code-server。
 
-[前置安装](https://github.com/cdr/code-server/blob/main/docs/npm.md)，node.js 版本需要与所下载的 VSCode's Electron 一致。
-
-> 笔者下载的 code-server 版本为 code-server_3.12.0_arm64.deb，其需要 node.js 14.x 版本。
+此外[前置安装](https://github.com/cdr/code-server/blob/main/docs/npm.md)提到 `node.js 版本需要与所下载的 VSCode's Electron 所依赖的版本一致`。笔者下载的 code-server 版本为 code-server_3.12.0_arm64.deb，其需要 node.js 14.x 版本。执行如下命令进行前置安装:
 
 ```bash
 sudo apt-get install -y \
@@ -23,7 +21,7 @@ sudo apt-get install -y \
 npm config set python python3
 ```
 
-执行如下命令，安装 yarn。参考 [Debian / Ubuntu 安装](https://yarn.bootcss.com/docs/install/#debian-stable)
+按照 [yarn 官网](https://yarn.bootcss.com/docs/install/#debian-stable) 所述，在 Debian / Ubuntu 系统中安装 yarn:
 
 ```bash
 curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
@@ -33,21 +31,21 @@ sudo apt update && sudo apt install yarn
 yarn --version // 1.22.15
 ```
 
-执行 `sudo vim .bashrc` 编辑 bashrc，写入 yarn 全局安装命令的执行路径。
+执行 `sudo vim .bashrc` 编辑 .bashrc，将 yarn 全局安装命令的执行路径写入。
 
 ```bash
 export PATH="$PATH:`yarn global bin`"
 source ~/.bashrc # 使之生效
 ```
 
-[安装 code-server](https://coder.com/docs/code-server/latest/npm#installing)，执行如下命令:
+参考[安装 code-server](https://coder.com/docs/code-server/latest/npm#installing)，执行如下命令安装 code-server:
 
 ```bash
 yarn global add code-server
 code-server --version # 3.12.0
 ```
 
-> 笔者使用 npm install -g code-server 安装，无法成功。最终使用 yarn global add code-server 安装成功。
+> 笔者使用 npm install -g code-server 无法成功安装，最终使用 yarn global add code-server 安装成功。
 
 编辑 `.config/code-server/config.yaml`
 
@@ -69,15 +67,19 @@ code-server
 
 在 `frpc.ini` 中添加以下配置:
 
+> frpc.ini 与 pm2 的完整配置说明可以参考[内网穿透](https://muyunyun.cn/blog/fes9wogn)章节。
+
 ```bash
 [vscode-server-frp-muyunyun-cn-5555]
 type = tcp
 local_ip = 127.0.0.1
+# code-server 服务运行在树莓派本地的 5555 端口上
 local_port = 5555
+# 对外运行在服务器端云主机 5555 端口上
 remote_port = 5555
 ```
 
-重启 frpc 服务:
+使用 pm2 重启 frpc 服务:
 
 ```bash
 cd /opt/frp_0.37.0_linux_arm64
@@ -92,7 +94,7 @@ pm2 restart start_frpc.sh
 
 ![](http://with.muyunyun.cn/9f5f9fa5cd5c1510695ca492e939c255.jpg)
 
-使用 pm2 守护运行 vscode server 服务以让相关服务能自动重启(比如断电重启系统后):
+使用 pm2 守护运行 vscode server 以让相关服务遇到意外(比如断电后)能自动重启:
 
 ```bash
 cd /opt/frp_0.37.0_linux_arm64
@@ -109,11 +111,13 @@ pm2 save
 
 ### 支持 Https 协议访问
 
-由于没有支持 Https，code-server 中的剪切板、插件等功能都不能解锁，同时控制台报了与 service work 相关的报错(参考 [Setting up to play with service workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers#setting_up_to_play_with_service_workers), service work 必须依赖 https)。
+访问 http 下的 code server 服务，发现不能完整使用插件、剪切板等功能模块，推测这些模块涉及依赖 service work，参考 [Setting up to play with service workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers#setting_up_to_play_with_service_workers) 得知, service work 必须在 Https 协议中访问。
 
 ![](http://with.muyunyun.cn/580bab3470fb6535fae23530db223a94.jpg-400)
 
-因此在 code-server 服务完全可用之前，需要支持 Https 协议，读者可以参考 [HTTPS 域名配置](https://muyunyun.cn/blog/mx5pvgl1) 一节，其介绍了给域名获取免费的 Https 证书并让 Https 生效的过程。
+------------------- 分割线 -------------------
+
+因此若要完整地使用 code server 服务，需要配置 Https 协议，读者可以参考 [HTTPS 域名配置](https://muyunyun.cn/blog/mx5pvgl1) 一节，其介绍了给域名获取免费的 Https 证书并让 Https 生效的过程。
 
 ### 支持在 Https 协议中访问 Web Socket
 
