--- a/RaspberryPi/linux/常用命令.md
+++ b/RaspberryPi/linux/常用命令.md
@@ -41,6 +41,7 @@ abbrlink: mbrsm6kj
 - [系统进程](#系统进程)
   - [ps](#ps)
 - [用户管理](#用户管理)
+  - [chsh](#chsh)
   - [users](#users)
   - [last](#last)
   - [su](#su)
@@ -628,6 +629,37 @@ ps -af | grep nginx
 ```
 
 ## 用户管理
+
+### chsh
+
+chsh 命令用于修改默认用户登录 shell。
+
+修改后重新启动 Shell 即可生效（exit/logout）。
+
+```bash
+# 必须使用完整路径，不能使用shell名
+chsh -s /bin/zsh
+```
+
+查看当前 Shell
+
+```bash
+echo $SHELL # /bin/zsh
+```
+
+列出当前所有已安装的Shell
+
+```bash
+cat /etc/shells
+
+# /bin/bash
+# /bin/csh
+# /bin/dash
+# /bin/ksh
+# /bin/sh
+# /bin/tcsh
+# /bin/zsh
+```
 
 ### users
 
