docs: update raspberryPi

--- a/RaspberryPi/7.基于树莓派部署code-server.md
+++ b/RaspberryPi/7.基于树莓派部署code-server.md
@@ -3,9 +3,13 @@ abbrlink: n45adwng
 title: 基于树莓派部署 code-server
 -->
 
-### 什么是 code-server
+[code-server](https://github.com/cdr/code-server) 是 vscode 的服务端程序，通过部署 code-server 在服务器，可以实现 web 端访问 vscode。进而可以达到以下能力:
 
-可以通过端口访问在线的 vscode，从而实现远程编程(比如在 ipad 编程)。
+* 【直接】支持跨设备(Mac/iPad/iPhone 等等)编程，同时保证多端编程环境统一。
+* 【直接】支持在 Web 端提交 git 代码。
+* 【间接】解放背包重量。
+
+至于将 code-server 部署在树莓派上相比云端服务器好处是综合成本低，后续若要更换云服务器，只需更改内网映射端口即可，迁移会十分便捷。
 
 ### 树莓派上部署 code-server
 
@@ -31,14 +35,14 @@ sudo apt update && sudo apt install yarn
 yarn --version // 1.22.15
 ```
 
-执行 `sudo vim .bashrc` 编辑 .bashrc，将 yarn 全局安装命令的执行路径写入。
+执行 `sudo vim .bashrc`，将 yarn 全局安装命令的执行路径写入 .bashrc 文件。
 
 ```bash
 export PATH="$PATH:`yarn global bin`"
 source ~/.bashrc # 使之生效
 ```
 
-参考[安装 code-server](https://coder.com/docs/code-server/latest/npm#installing)，执行如下命令安装 code-server:
+参照 [code-server 官网安装教程](https://coder.com/docs/code-server/latest/npm#installing)，执行以下命令安装 code-server:
 
 ```bash
 yarn global add code-server
@@ -61,7 +65,7 @@ cert: false
 ```
 
 ```bash
-# 启动 code server
+# 启动 code-server
 code-server
 ```
 
@@ -90,11 +94,11 @@ pm2 restart start_frpc.sh
 
 ![](http://with.muyunyun.cn/c4987da142cbc4b261b6b333df5d490b.jpg)
 
-同时在公网中可以看到 code server 服务已成功运行
+同时在公网中可以看到 code-server 服务已成功运行
 
 ![](http://with.muyunyun.cn/9f5f9fa5cd5c1510695ca492e939c255.jpg)
 
-使用 pm2 守护运行 vscode server 以让相关服务遇到意外(比如断电后)能自动重启:
+使用 pm2 守护运行 code-server 以让相关服务遇到意外(比如断电后)能自动重启:
 
 ```bash
 cd /opt/frp_0.37.0_linux_arm64
@@ -105,25 +109,27 @@ pm2 start /opt/frp_0.37.0_linux_arm64/start_code_server.sh
 pm2 save
 ```
 
-笔者在域名解析处新增 code 主机记录以语义化访问 code server 服务，此时访问 http://code.muyunyun.cn:5555 与访问 http://frp.muyunyun.cn:5555 效果是相同的。
+笔者在域名解析处新增 code 主机记录以语义化访问 code-server 服务，此时访问 http://code.muyunyun.cn:5555 与访问 http://frp.muyunyun.cn:5555 效果是相同的。
 
 ![](http://with.muyunyun.cn/b0afbe6f729762ce8e50a00624c3e11a.jpg-400)
 
-### 支持 Https 协议访问
+### 支持 HTTPS 协议访问
 
-访问 http 下的 code server 服务，发现不能完整使用插件、剪切板等功能模块，推测这些模块涉及依赖 service work，参考 [Setting up to play with service workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers#setting_up_to_play_with_service_workers) 得知, service work 必须在 Https 协议中访问。
+访问 HTTP 下的 code-server 服务，发现不能完整使用插件、剪切板等功能模块。
 
 ![](http://with.muyunyun.cn/580bab3470fb6535fae23530db223a94.jpg-400)
 
-------------------- 分割线 -------------------
+根据控制台报错信息，推测这些模块依赖了 service work，查阅 [Setting up to play with service workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers#setting_up_to_play_with_service_workers) 得知, service work 确实必须在 Https 协议中使用。
 
-因此若要完整地使用 code server 服务，需要配置 Https 协议，读者可以参考 [HTTPS 域名配置](https://muyunyun.cn/blog/mx5pvgl1) 一节，其介绍了给域名获取免费的 Https 证书并让 Https 生效的过程。
+因此若要完整地使用 code-server 服务，需要配置 HTTPS 协议，本文中就不展开 HTTPS 配置的详细说明了，相关过程记录在 [HTTPS 域名配置](https://muyunyun.cn/blog/mx5pvgl1) 章节中，其介绍了给域名获取免费的 Https 证书并让 Https 生效的过程。
 
-### 支持在 Https 协议中访问 Web Socket
+### 支持在 HTTPS 协议中访问 WebSocket
 
-在配置完 HTTPS 服务后，访问相关链接还是无法使用，因为 code-server 是基于 Web Socket 来保持长连接的，因此还需要在 nginx 对 websocket 的流量作相关的配置。
+在配置完 HTTPS 服务后，访问 HTTPS 链接发现还是无法在 web 端正常使用 vscode，排查发现 code-server 使用 WebSocket 以保持长连接，因此需要在 nginx 对 WebSocket 的流量作配置。
 
-执行 `vim /etc/nginx/conf.d/www.muyunyun.cn.conf`，完整配置如下:
+执行 `vim /etc/nginx/conf.d/www.muyunyun.cn.conf`，完整的 nginx 配置如下:
+
+------------ 分割线 ------------
 
 ```bash
 map $http_upgrade $connection_upgrade {
