docs: update RaspberryPi

--- a/RaspberryPi/7.基于树莓派部署code-server.md
+++ b/RaspberryPi/7.基于树莓派部署code-server.md
@@ -121,13 +121,13 @@ pm2 save
 
 根据控制台报错信息，推测这些模块依赖了 service work，查阅 [Setting up to play with service workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers#setting_up_to_play_with_service_workers) 得知, service work 确实必须在 Https 协议中使用。
 
-因此若要完整地使用 code-server 服务，需要配置 HTTPS 协议，本文中就不展开 HTTPS 配置的详细说明了，相关过程记录在 [HTTPS 域名配置](https://muyunyun.cn/blog/mx5pvgl1) 章节中，其介绍了给域名获取免费的 Https 证书并让 Https 生效的过程。
+因此若要完整地使用 code-server 服务，需要配置 HTTPS 协议，配置过程记录在 [HTTPS 域名配置](https://muyunyun.cn/blog/mx5pvgl1) 章节中，其介绍了给域名获取免费的 Https 证书并让 Https 生效的过程。
 
 ### 支持在 HTTPS 协议中访问 WebSocket
 
-在配置完 HTTPS 服务后，访问 HTTPS 链接发现还是无法在 web 端正常使用 vscode，排查发现 code-server 使用 WebSocket 以保持长连接，因此需要在 nginx 对 WebSocket 的流量作配置。
+在配置完 HTTPS 服务后，访问 HTTPS 链接发现还是无法在 web 端正常使用 vscode，排查发现 code-server 使用 WebSocket 以保持长连接，因此需要在 nginx 配置文件中增加对 [WebSocket 配置](http://nginx.org/en/docs/http/websocket.html)。
 
-执行 `vim /etc/nginx/conf.d/www.muyunyun.cn.conf`，完整的 nginx 配置如下:
+执行 `vim /etc/nginx/conf.d/www.muyunyun.cn.conf` 进行编辑，完整的 nginx 配置如下:
 
 ```bash
 map $http_upgrade $connection_upgrade {
@@ -191,16 +191,9 @@ server {
 }
 ```
 
-此时实现了在公网中使用使用 https 访问 code-server。
+重新加载 nginx 配置后，此时终于实现了在 web 端使用上 code-server 的能力。
 
 ![](http://with.muyunyun.cn/c8b78a74fccd162ef97ecd2b53da09f4.jpg-400)
-
-### 给项目添加写入权限
-
-```bash
-chown -R ubuntu /home/project/blog
-chown -R ubuntu /home/project/blog/.git
-```
 
 ### code-server 同步 ssh
 
